[gd_scene load_steps=5 format=3 uid="uid://cpamc627qvtxv"]

[ext_resource type="Script" uid="uid://cp6p4105y8hnh" path="res://Scripts/sheep_character.gd" id="1_aemob"]
[ext_resource type="Texture2D" uid="uid://dorib0vwsmwif" path="res://Assets/sheep.png" id="1_eociv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aemob"]
radius = 30.016663

[sub_resource type="CircleShape2D" id="CircleShape2D_5qn4e"]
radius = 204.0

[node name="Sheep" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_aemob")

[node name="Sheep_Sprite" type="Sprite2D" parent="."]
position = Vector2(7.3666544, 7.5)
scale = Vector2(0.14888892, 0.14888889)
texture = ExtResource("1_eociv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 14)
shape = SubResource("CircleShape2D_aemob")

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
position = Vector2(-1, 14)
shape = SubResource("CircleShape2D_5qn4e")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="Sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_sight_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
